hphp/test/slow/class-ptr/class-eager-string.php.expectf
class(Bar)
bool(true)
string(3) "Bar"
vec(2) {
  class(Bar)
  NULL
}
class(Foo)
string(2) "sm"
int(10)
string(1) "m"

Fatal error: Cls: Expected string or object, got null in %s/class-ptr/class-eager-string.php on line 32
